#0,1,0,20210510
	Light/Camera lister Improved.
	'Freeze On' Repeat count issue fixed.

#0,1,0,20210506
	'Freeze On' improved ('Animation/Freeze On')

#0,1,0,20210505
	'Freeze On' Fix an IK controller in position for wanted frame range 'Animation/Freeze On'.

#0,1,0,20210503
	'W,E,R' auto Coordinate Toggle 'World/Local' disabled by default. 'Ctrl+W' for Active/Deactive (3DsMax mode).

#0,1,0,20210502
	'Parent Constraint' and 'parent to world' works on pose mode too.

#0,1,0,20210429
	'SetKey' issue when no object select fixed. (Max mode)
	'Edit Mode' shortkey disabled for Linked, Proxy & Libraryoveride Armature that can not be edit.

#0,1,0,20210418
	All version check codes updated to make then add-on works on Blender 3.0 and above too;

#0,1,0,20210411
	Parent constraint now works better with Armature objects.

# 0,1,0,20210328
	Minor improvement and bug fixed in some of tools.
	'K' add key frame on ui items too (3DsMax mode).
	'S' add key frame on ui items too (Maya mode).
	'Connect Script To Active Object' operator bind script to the object and makes link or merge with it to news scene automatically.

# 0,1,0,20210319
	'6' open float geometry node editor (Replacement for PFSurce shortcut) (3DsMax mode).
	'bpy.ops.editor.float' Updated to work in Blender 2.93 and improved ('M', '8', 'F11' in 3DsMax mode).

# 0,1,0,20210317
	'Align Object' works for objects with Constriants.
	'Set start/end frame' (Right Click Menu time line and Sequencer).
	'Join plus' Ask for apply befor join 'Ctrl + j' (Blender & 3DsMax Mode).

# 0,1,0,20210310
	Render preset Save/Load and Copy/Paste operator added (Render Properties/ Presets)

# 0,1,0,20210221
	"Overridelibrary" Driver Issue fixer applying for the whole scene automatically (Tools/Animation/Fix Override Driver Issue)

# 0,1,0,20210219
	Solve the Library override broken shapekey drivers (Tools/Animation/Fix Override Driver Issue).

# 0,1,0,20210216
	Select by Length and Segment Count added to Select Menu in Curve Edit mode.