@@ -1,3 +1,8 @@
+#0,1,0,20210511
+	'OpenGL Depth Picking' Automaticly disable on Pose mode to speed up bone selecting.
+	'C' Camera search fits camera frame to view too (3DsMax Mode).
+	Timeline Red bar back with no crash.
+
 #0,1,0,20210510
 	Light/Camera lister Improved.
 	'Freeze On' Repeat count issue fixed.
